--- a/Front-End JavaScript Frameworks: AngularJS/Homework 3/app/views/aboutus.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 3/app/views/aboutus.html
@@ -52,7 +52,8 @@
             <div class="col-xs-12 col-sm-9">
                 <h2>Corporate Leadership</h2>
                 <ul class="media-list">
-					<h4>Implement the Corporate Leaders List here</h4>
+					<h4>Corporate Leadership</h4>
+                    <li></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-3">
