--- a/Front-End JavaScript Frameworks: AngularJS/Homework 3/app/views/aboutus.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 3/app/views/aboutus.html
@@ -52,8 +52,17 @@
             <div class="col-xs-12 col-sm-9">
                 <h2>Corporate Leadership</h2>
                 <ul class="media-list">
-					<h4>Corporate Leadership</h4>
-                    <li></li>
+                    <li class="media" ng-repeat="leader in leaders">
+                        <div class="media-left media-middle">
+                            <img class="media-object img-thumbnail" ng-src={{leader.image}} alt="Leader">        
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">{{leader.name}}
+                                <small>{{leader.designation}}</small>   
+                            </h4>
+                            <p>{{leader.description}}</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-3">
