Добавил исправления в домашнюю работу №3.

--- a/Front-End JavaScript Frameworks: AngularJS/Homework 3/app/views/home.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 3/app/views/home.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!----- End .row.row-content -------->
 
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!---- End .row.row-content ----->
 
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
@@ -57,5 +57,5 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div><!---- End .row.row-content
+    </div><!----- End .container ---->
