--- a/Front-End JavaScript Frameworks: Angular/conFusion/src/app/contact/contact.component.html
+++ b/Front-End JavaScript Frameworks: Angular/conFusion/src/app/contact/contact.component.html
@@ -42,40 +42,40 @@
 
     <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
       <p>
-        <mat-input-container class="half-width" dividerColor="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
+        <mat-form-field class="half-width" color="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
           <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
           <mat-hint>
             <span [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched)">
               firstname is required
             </span>
           </mat-hint>
-        </mat-input-container>
-        <mat-input-container class="half-width" dividerColor="{{(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched) ? 'warn' : 'primary'}}">
+        </mat-form-field>
+        <mat-form-field class="half-width" color="{{(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched) ? 'warn' : 'primary'}}">
           <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
           <mat-hint>
             <span [hidden]="!(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched)">
               lastname is required
             </span>
           </mat-hint>
-        </mat-input-container>
+        </mat-form-field>
       </p>
       <p>
-        <mat-input-container class="half-width" dividerColor="{{(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched) ? 'warn' : 'primary'}}">
+        <mat-form-field class="half-width" color="{{(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched) ? 'warn' : 'primary'}}">
           <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" required>
           <mat-hint>
             <span [hidden]="!(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched)">
               Tel. number is required
             </span>
           </mat-hint>
-        </mat-input-container>
-        <mat-input-container class="half-width" dividerColor="{{(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched) ? 'warn' : 'primary'}}">
+        </mat-form-field>
+        <mat-form-field class="half-width" color="{{(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched) ? 'warn' : 'primary'}}">
           <input matInput formControlName="email" placeholder="Email" type="email" required>
           <mat-hint>
             <span [hidden]="!(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">
               Email ID is required
             </span>
           </mat-hint>
-        </mat-input-container>
+        </mat-form-field>
       </p>
       <table class="form-size">
         <td>
@@ -90,9 +90,9 @@
         </td>
       </table>
       <p>
-        <mat-input-container class="full-width">
+        <mat-form-field class="full-width">
           <textarea matInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
-        </mat-input-container>
+        </mat-form-field>
       </p>
       <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
     </form>
