--- a/Front-End JavaScript Frameworks: Angular/conFusion/src/app/login/login.component.html
+++ b/Front-End JavaScript Frameworks: Angular/conFusion/src/app/login/login.component.html
@@ -10,22 +10,22 @@
 
   <mat-dialog-content>
     <p>
-      <mat-input-container dividerColor="{{username.invalid && !username.pristine ? 'warm' : 'primary'}}">
+      <mat-form-field color="{{username.invalid && !username.pristine ? 'warm' : 'primary'}}">
         <input matInput placeholder="Username" type="text" [(ngModel)]="user.username" name="username" #username="ngModel" required>
         <mat-hint>
           <span [hidden]="username.pristine">
           <span [hidden]="!username.errors?.required">username is required</span>
           </span>
         </mat-hint>
-      </mat-input-container>
-      <mat-input-container dividerColor="{{password.invalid && !password.pristine ? 'warm' : 'primary'}}">
+      </mat-form-field>
+      <mat-form-field color="{{password.invalid && !password.pristine ? 'warm' : 'primary'}}">
         <input matInput placeholder="Password" type="password" [(ngModel)]="user.password" name="password" #password="ngModel" required>
         <mat-hint>
           <span [hidden]="password.pristine">
           <span [hidden]="!password.errors?.required">password is required</span>
           </span>
         </mat-hint>
-      </mat-input-container>
+      </mat-form-field>
       <mat-checkbox [(ngModel)]="user.remember" name="remember">Remember Me</mat-checkbox>
     </p>
   </mat-dialog-content>
