--- a/Front-End JavaScript Frameworks: Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Front-End JavaScript Frameworks: Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -44,8 +44,43 @@
           <p matLine>{{comment.rating}} Stars</p>
           <p matLine>-- {{comment.author}} {{comment.date | date}}</p>
         </mat-list-item>
+        <mat-list-item *ngIf="reviewForm.valid">
+          <p matLine>{{reviewForm.value.comment}}</p>
+          <p matLine>{{reviewForm.value.rating}} Stars</p>
+          <p matLine>-- {{reviewForm.value.author}} {{reviewForm.value.date | date}}</p>
+        </mat-list-item>
       </mat-list>
+
+      <form novalidate [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field class="full-width" color="{{(formErrors.author) ? 'warn' : 'primary'}}">
+            <input matInput formControlName="author" placeholder="Name" type="text" required>
+            <mat-hint>
+              <span [hidden]="!(formErrors.author)">
+                {{formErrors.author}}
+              </span>
+            </mat-hint>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-slider formControlName="rating" thumbLabel tickInterval="1" min="1" max="5"></mat-slider>
+        </p>
+        <p>
+          <mat-form-field class="full-width" color="{{(formErrors.comment) ? 'warn' : 'primary'}}">
+            <textarea matInput formControlName="comment" placeholder="Your comment" rows="10" required></textarea>
+            <mat-hint>
+              <span [hidden]="!(formErrors.comment)">
+                {{formErrors.comment}}
+              </span>
+            </mat-hint>
+          </mat-form-field>
+        </p>
+
+        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="reviewForm.invalid">Submit</button>
+      </form>
     </div>
+
+
   </div>
 
   <div [hidden]="dish">
