--- a/Front-End JavaScript Frameworks: Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Front-End JavaScript Frameworks: Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -44,14 +44,14 @@
           <p matLine>{{comment.rating}} Stars</p>
           <p matLine>-- {{comment.author}} {{comment.date | date}}</p>
         </mat-list-item>
-        <mat-list-item *ngIf="reviewForm.valid">
-          <p matLine>{{reviewForm.value.comment}}</p>
-          <p matLine>{{reviewForm.value.rating}} Stars</p>
-          <p matLine>-- {{reviewForm.value.author}} {{reviewForm.value.date | date}}</p>
+        <mat-list-item *ngIf="commentForm.valid">
+          <p matLine>{{commentForm.value.comment}}</p>
+          <p matLine>{{commentForm.value.rating}} Stars</p>
+          <p matLine>-- {{commentForm.value.author}} {{commentForm.value.date | date}}</p>
         </mat-list-item>
       </mat-list>
 
-      <form novalidate [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
+      <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
         <p>
           <mat-form-field class="full-width" color="{{(formErrors.author) ? 'warn' : 'primary'}}">
             <input matInput formControlName="author" placeholder="Name" type="text" required>
@@ -76,7 +76,7 @@
           </mat-form-field>
         </p>
 
-        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="reviewForm.invalid">Submit</button>
+        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
       </form>
     </div>
 
