--- a/Front-End JavaScript Frameworks: Angular/conFusion/src/styles.scss
+++ b/Front-End JavaScript Frameworks: Angular/conFusion/src/styles.scss
@@ -25,6 +25,11 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+.container {
+  margin: 20px;
+  display:flex;
+}
+
 .background-primary {
   background-color: $background-dark !important;
 }
@@ -39,7 +44,9 @@ body {
   flex: 1 1 auto;
 }
 
-.container {
-  margin: 20px;
-  display:flex;
+.highlight {
+  background-color: $background-pale;
+  border: 1px solid $primary-color-dark;
+  z-index: 1;
+  transform: scale(1.01);
 }
