--- a/Front-End JavaScript Frameworks: Angular/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/Front-End JavaScript Frameworks: Angular/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -6,81 +6,76 @@
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>
-            <h3>{{dish.name | uppercase}}</h3>
-          </mat-card-title>
-        </mat-card-header>
-        <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
-        <mat-card-content>
-          <p>{{dish.description}}
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
-          <button mat-button (click)="goBack()">BACK</button>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-          <span class="flex-spacer"></span>
-          <button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
+
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <h3>{{dish.name | uppercase}}</h3>
+        </mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
+      <mat-card-content>
+        <p>{{dish.description}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
+        <button mat-button (click)="goBack()">BACK</button>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 
-  <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
-      <mat-list>
-        <mat-card-header>
-          <mat-card-title>
-            <h3>Comments</h3>
-          </mat-card-title>
-        </mat-card-header>
-        <mat-list-item *ngFor="let comment of dish.comments">
-          <p matLine>{{comment.comment}}</p>
-          <p matLine>{{comment.rating}} Stars</p>
-          <p matLine>-- {{comment.author}} {{comment.date | date}}</p>
-        </mat-list-item>
-        <mat-list-item *ngIf="commentForm.valid">
-          <p matLine>{{commentForm.value.comment}}</p>
-          <p matLine>{{commentForm.value.rating}} Stars</p>
-          <p matLine>-- {{commentForm.value.author}} {{commentForm.value.date | date}}</p>
-        </mat-list-item>
-      </mat-list>
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
+    <mat-list>
+      <mat-card-header>
+        <mat-card-title>
+          <h3>Comments</h3>
+        </mat-card-title>
+      </mat-card-header>
+      <mat-list-item *ngFor="let comment of dish.comments">
+        <p matLine>{{comment.comment}}</p>
+        <p matLine>{{comment.rating}} Stars</p>
+        <p matLine>-- {{comment.author}} {{comment.date | date}}</p>
+      </mat-list-item>
+      <mat-list-item *ngIf="commentForm.valid">
+        <p matLine>{{commentForm.value.comment}}</p>
+        <p matLine>{{commentForm.value.rating}} Stars</p>
+        <p matLine>-- {{commentForm.value.author}} {{commentForm.value.date | date}}</p>
+      </mat-list-item>
+    </mat-list>
 
-      <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
-        <p>
-          <mat-form-field class="full-width" color="{{(formErrors.author) ? 'warn' : 'primary'}}">
-            <input matInput formControlName="author" placeholder="Name" type="text" required>
-            <mat-hint>
+    <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width" color="{{(formErrors.author) ? 'warn' : 'primary'}}">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-hint>
               <span [hidden]="!(formErrors.author)">
                 {{formErrors.author}}
               </span>
-            </mat-hint>
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-slider formControlName="rating" thumbLabel tickInterval="1" min="1" max="5"></mat-slider>
-        </p>
-        <p>
-          <mat-form-field class="full-width" color="{{(formErrors.comment) ? 'warn' : 'primary'}}">
-            <textarea matInput formControlName="comment" placeholder="Your comment" rows="10" required></textarea>
-            <mat-hint>
+          </mat-hint>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-slider formControlName="rating" thumbLabel tickInterval="1" min="1" max="5"></mat-slider>
+      </p>
+      <p>
+        <mat-form-field class="full-width" color="{{(formErrors.comment) ? 'warn' : 'primary'}}">
+          <textarea matInput formControlName="comment" placeholder="Your comment" rows="10" required></textarea>
+          <mat-hint>
               <span [hidden]="!(formErrors.comment)">
                 {{formErrors.comment}}
               </span>
-            </mat-hint>
-          </mat-form-field>
-        </p>
+          </mat-hint>
+        </mat-form-field>
+      </p>
 
-        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
-      </form>
-    </div>
-
-
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+    </form>
   </div>
 
   <div [hidden]="dish || errMess">
